Initial pie chart

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MobileUX5</string>
+    <string name="app_name">Chai Pin Zheng</string>
     <string name="large_text">
         "Material is the metaphor.\n\n"
 
